src/objects/HRM_Employee__c.object
<CustomObject>
    <fields>
        <fullName>Active_Status__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_id__c</fullName>
        <label>Email id</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>45</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <picklist>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>